<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TambahIklanActivity">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masukkan_id_iklan"/>

        <EditText
            android:id="@+id/id_iklan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/masukkan_string"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buat_qr_code_btn"
                style="?android:attr/buttonStyle"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buat_qr_code"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/hapus_btn"
                style="?android:attr/buttonStyle"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hapus"
                android:textAllCaps="false"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/konten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/qr_code_image"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/buat_qr_code"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/raw_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raw_qrcode"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:enabled="false"
                    android:layout_weight="1"
                    android:id="@+id/raw_qrcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/raw_qrcode"
                    android:layout_marginBottom="8dp"/>

                <Button
                    android:visibility="gone"
                    android:id="@+id/copy_btn"
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/copy"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masukkan_nama_qrcode"/>

            <EditText
                android:id="@+id/nama_qrcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/masukkan_nama_qrcode"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_iklan"/>

            <EditText
                android:id="@+id/nama_iklan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/nama_iklan"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/katText"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kategori"/>

            <Spinner
                android:layout_marginBottom="8dp"
                android:id="@+id/kategoriSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitude_wajib"/>

            <EditText
                android:id="@+id/lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/latitude"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitude_wajib"/>

            <EditText
                android:id="@+id/lng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/longitude"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomor_telp_wajib_diawali_62"/>

            <EditText
                android:id="@+id/nomor_telp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/nomor_telp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/url_wajib_diawali_dengan_https"/>

            <EditText
                android:id="@+id/link_iklan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/url_iklan"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/simpan_qr_code_btn"
                style="?android:attr/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simpan_qr_code"
                android:textAllCaps="false"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>