<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditIklanActivity">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_iklan"/>

        <EditText
            android:id="@+id/edit_nama_iklan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nama_iklan"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kategori"/>

        <Spinner
            android:layout_marginBottom="15dp"
            android:id="@+id/edit_kategori_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latitude"/>

        <EditText
            android:id="@+id/edit_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/latitude"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/longitude"/>

        <EditText
            android:id="@+id/edit_lng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/longitude"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomor_telp"/>

        <EditText
            android:id="@+id/edit_nomor_telp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/nomor_telp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/url_iklan"/>

        <EditText
            android:id="@+id/edit_link_iklan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/url_iklan"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/raw_qrcode"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:enabled="false"
                android:id="@+id/edit_raw_iklan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/raw_qrcode"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/paste_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paste"
                android:textAllCaps="false"
                android:layout_weight="3"/>

        </LinearLayout>

        <Button
            android:id="@+id/edit_simpan_btn"
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            android:textAllCaps="false"/>

    </LinearLayout>
</ScrollView>