<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activity.TambahEditOverviewActivity">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_overview"/>

    <EditText
        android:id="@+id/overview_edt"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_string"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/overview_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simpan"/>

</LinearLayout>